--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 
   /* ---- Footer ---- */
   footer{border-top:1px solid var(--line); padding:16px; color:var(--muted); text-align:center;}
+  /* Desktop override: limit car PNG size */
+  @media (min-width: 1024px){
+    .hub{width:240px;height:240px;}
+  }
 </style>
 </head>
 <body>
