--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   /* ---- Sections ---- */
   .section{max-width:1100px; margin:24px auto; padding:0 16px;}
-  .section h2{display:flex; align-items:center; gap:10px; font-size: clamp(18px,2.2vw,24px); margin:24px 0 14px; font-weight:900; color:var(--brand-700);}  
+  .section h2{display:flex; align-items:center; gap:10px; font-size: clamp(18px,2.2vw,24px); margin:24px 0 14px; font-weight:900; color:var(--brand-700);} 
   .desc{color:var(--muted); font-size:14px; margin-bottom:10px;}
 
   /* ---- Cards ---- */
@@ -42,18 +42,22 @@
   .linkbtn.primary{background:var(--brand); color:#fff; border-color:transparent;}
 
   /* ---- 4WD layout ---- */
-  .wheel{position:relative;margin:16px auto 10px;width:min(480px,92vw);aspect-ratio:1/1;}
-  .hub{position:absolute;top:50%;left:50%;translate:-50% -50%;width:clamp(300px,46vw,480px);height:clamp(300px,46vw,480px);} /* PNG少し拡大 */
+  .layout-top{display:grid; gap:16px; align-items:start;}
+  .wheel{position:relative;margin:8px auto 8px;width:min(480px,92vw);aspect-ratio:1/1;}
+  .hub{position:absolute;top:50%;left:50%;translate:-50% -50%;width:clamp(300px,46vw,480px);height:clamp(300px,46vw,480px);} /* base */
   .hub img.carimg{width:100%;height:100%;object-fit:contain;display:block !important;}
 
   .wheel .corner{position:absolute;display:inline-flex;align-items:center;gap:8px;text-decoration:none;background:#fff;border:1px solid var(--line);color:var(--brand-700);font-weight:800;padding:10px 12px;border-radius:999px;box-shadow:var(--shadow);font-size:14px;} 
-  .wheel .corner.tl{top:12%;left:12%;}
-  .wheel .corner.tr{top:12%;right:12%;}
-  .wheel .corner.bl{bottom:12%;left:12%;}
-  .wheel .corner.br{bottom:12%;right:12%;}
+  .wheel .corner.tl{top:6%;left:6%;}
+  .wheel .corner.tr{top:6%;right:6%;}
+  .wheel .corner.bl{bottom:6%;left:6%;}
+  .wheel .corner.br{bottom:6%;right:6%;}
   .wheel .oncar{top:50%; left:50%; transform:translate(-50%,-50%);} /* 中央重ね */
   .mini-badge{width:22px;height:22px;border-radius:6px;display:grid;place-items:center;background:linear-gradient(135deg, var(--brand) 0%, var(--brand-300) 100%);color:#fff;font-size:12px;font-weight:800;}
   .mini-badge svg{width:14px;height:14px; stroke:#fff; fill:none; stroke-width:2; stroke-linecap:round; stroke-linejoin:round;}
+
+  /* row of four tools */
+  .tools-row{display:grid; gap:14px; grid-template-columns: repeat(auto-fit, minmax(240px,1fr));}
 
   /* ---- Toast ---- */
   .toast{position:fixed; left:50%; transform:translateX(-50%); bottom:24px; background:#111827; color:#fff; padding:10px 14px; border-radius:12px; box-shadow:var(--shadow); opacity:0; pointer-events:none; transition:opacity .25s ease;} 
@@ -61,18 +65,24 @@
 
   /* ---- Footer ---- */
   footer{border-top:1px solid var(--line); padding:16px; color:var(--muted); text-align:center;}
-  /* Desktop override: limit car PNG size */
-  /* Desktop override: cluster the chips near the car and reduce footprint */
+
+  /* Desktop overrides */
   @media (min-width: 1024px){
-    #shitenno{margin-top:8px;}
-    #shitenno .wheel{width:340px; margin:6px auto 12px;}
-    #shitenno .wheel .corner{padding:8px 10px;}
-    #shitenno .wheel .corner.tl{top:6%;left:6%;}
-    #shitenno .wheel .corner.tr{top:6%;right:6%;}
-    #shitenno .wheel .corner.bl{bottom:6%;left:6%;}
-    #shitenno .wheel .corner.br{bottom:6%;right:6%;}
+    /* 左: PLカード（他カードと同幅）｜中央: 車ユニット（中央寄せ）｜右: スペーサー */
+    .layout-top{grid-template-columns: 1fr auto 1fr; align-items:center;}
+    /* カード幅＝下段4列の1カラム幅と一致: (100% - 3*gap)/4 = (100% - 42px)/4 */
+    #card-pl{width: clamp(240px, calc((100% - 42px)/4), 280px); justify-self:end;}
+    .wheel{width:340px; margin:6px auto; justify-self:center;}
     .hub{width:240px;height:240px;}
+    .tools-row{grid-template-columns: repeat(4, 1fr);} /* 4枚を同一行 */
+    .card{min-height: 220px;} /* 高さ統一 */
   }
+    /* カード幅＝下段4列の1カラム幅と一致: (100% - 3*gap)/4 = (100% - 42px)/4 */
+    #card-pl{width: clamp(240px, calc((100% - 42px)/4), 280px); justify-self:end;}
+    .wheel{width:340px; margin:6px auto; justify-self:center;}
+    .hub{width:240px;height:240px;}
+    .tools-row{grid-template-columns: repeat(4, 1fr);} /* 4枚を同一行 */
+  
 </style>
 </head>
 <body>
@@ -92,89 +102,81 @@
     <h2>🚗 黒字経営4WD</h2>
     <p class="desc">変動PL＋四つの実務ツールで、黒字経営を駆動する。</p>
 
-    <!-- 上段：車＋4輪リンク＋中央チップ（カードと同じアイコン体系） -->
-    <div class="wheel" aria-label="4WD配置">
-      <div class="hub">
-        <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="eager" />
-      </div>
-      <!-- 中央：変動損益（PL） -->
-      <a id="link-pl-center" class="corner oncar" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
-        <span class="mini-badge">PL</span><span>変動損益</span>
-      </a>
-      <!-- 左上：売上換算（⇄ を SVG 化／stroke-width=2 で上下と同じ太さ） -->
-      <a class="corner tl" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener">
-        <span class="mini-badge" aria-hidden="true">
-          <svg viewBox="0 0 24 24"><path d="M7 12h10"/><path d="M10 9l-3 3 3 3"/><path d="M14 9l3 3-3 3"/></svg>
-        </span>
-        <span>売上換算</span>
-      </a>
-      <!-- 右上：価格改定（⇅ を SVG 化／同じ stroke-width=2） -->
-      <a class="corner tr" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">
-        <span class="mini-badge" aria-hidden="true">
-          <svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg>
-        </span>
-        <span>価格改定</span>
-      </a>
-      <!-- 左下：人件費 -->
-      <a class="corner bl" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">
-        <span class="mini-badge" aria-hidden="true">
-          <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="9"/><path d="M12 7v5l3 2"/></svg>
-        </span>
-        <span>人件費</span>
-      </a>
-      <!-- 右下：自動化効果 -->
-      <a class="corner br" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener">
-        <span class="mini-badge" aria-hidden="true">
-          <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a8 8 0 0 0 0-6M4.6 9a8 8 0 0 0 0 6"/><path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M17.66 6.34l1.41-1.41M6.34 17.66l-1.41 1.41"/></svg>
-        </span>
-        <span>自動化効果</span>
-      </a>
-    </div>
-
-    <!-- 下段：各ツールの簡易説明＋リンク（正式名称、URLコピー付き） -->
-    <div class="grid" aria-label="4WDの各ツール説明">
-      <article class="card">
-        <div class="inner"><div class="head"><div class="badge">PL</div><div><h3>ボールで学ぶ変動損益計算書</h3><p>粗利と変動費・固定費の関係を体感的に理解できます。</p></div></div></div>
+    <!-- 上段：左にPLカード、右に車ユニット（PCでは横並び） -->
+    <div class="layout-top">
+      <!-- PLカード（車の左側に上げる） -->
+      <article class="card" id="card-pl">
+        <div class="inner">
+          <div class="head">
+            <div class="badge">PL</div>
+            <div>
+              <h3>ボールで学ぶ変動損益計算書</h3>
+              <p>粗利と変動費・固定費の関係を体感的に理解できます。</p>
+            </div>
+          </div>
+        </div>
         <div class="foot">
           <a class="linkbtn primary" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">開く</a>
           <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/hendou_PL/')">URLコピー</button>
         </div>
       </article>
 
+      <!-- 車＋四隅チップ -->
+      <div class="wheel" aria-label="4WD配置">
+        <div class="hub">
+          <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="eager" />
+        </div>
+        <a class="corner oncar" href="https://takatrp.github.io/hendou_PL/" target="_blank" rel="noopener">
+          <span class="mini-badge">PL</span><span>変動損益</span>
+        </a>
+        <a class="corner tl" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener">
+          <span class="mini-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><path d="M7 12h10"/><path d="M10 9l-3 3 3 3"/><path d="M14 9l3 3-3 3"/></svg>
+          </span>
+          <span>売上換算</span>
+        </a>
+        <a class="corner tr" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">
+          <span class="mini-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg>
+          </span>
+          <span>価格改定</span>
+        </a>
+        <a class="corner bl" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">
+          <span class="mini-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="9"/><path d="M12 7v5l3 2"/></svg>
+          </span>
+          <span>人件費</span>
+        </a>
+        <a class="corner br" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener">
+          <span class="mini-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a8 8 0 0 0 0-6M4.6 9a8 8 0 0 0 0 6"/><path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M17.66 6.34l1.41-1.41M6.34 17.66l-1.41 1.41"/></svg>
+          </span>
+          <span>自動化効果</span>
+        </a>
+      </div>
+    </div>
+
+    <!-- 下段：4枚を同一行（PC）に -->
+    <div class="tools-row" aria-label="4WDの各ツール説明">
       <article class="card">
         <div class="inner"><div class="head"><div class="badge">
           <svg viewBox="0 0 24 24"><path d="M7 12h10"/><path d="M10 9l-3 3 3 3"/><path d="M14 9l3 3-3 3"/></svg>
         </div><div><h3>それ、売上に直すといくらですか？</h3><p>各KPI・単位を売上金額に換算して意思決定を支援します。</p></div></div></div>
-        <div class="foot">
-          <a class="linkbtn primary" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener">開く</a>
-          <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/convert-to-sales/')">URLコピー</button>
-        </div>
+        <div class="foot"><a class="linkbtn primary" href="https://takatrp.github.io/convert-to-sales/" target="_blank" rel="noopener">開く</a><button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/convert-to-sales/')">URLコピー</button></div>
       </article>
-
       <article class="card">
         <div class="inner"><div class="head"><div class="badge">
           <svg viewBox="0 0 24 24"><path d="M12 6v12"/><path d="M8 10l4-4 4 4"/><path d="M8 14l4 4 4-4"/></svg>
         </div><div><h3>価格改定検討ツール</h3><p>価格を上げ下げした場合の売上・利益影響をシミュレーション。</p></div></div></div>
-        <div class="foot">
-          <a class="linkbtn primary" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">開く</a>
-          <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/price-up-down/')">URLコピー</button>
-        </div>
+        <div class="foot"><a class="linkbtn primary" href="https://takatrp.github.io/price-up-down/" target="_blank" rel="noopener">開く</a><button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/price-up-down/')">URLコピー</button></div>
       </article>
-
       <article class="card">
         <div class="inner"><div class="head"><div class="badge">¥</div><div><h3>人件費見える化ツール</h3><p>時間単価で人件費を可視化し、採算ラインや効率改善を確認できます。</p></div></div></div>
-        <div class="foot">
-          <a class="linkbtn primary" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">開く</a>
-          <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/time-unit-cost/')">URLコピー</button>
-        </div>
+        <div class="foot"><a class="linkbtn primary" href="https://takatrp.github.io/time-unit-cost/" target="_blank" rel="noopener">開く</a><button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/time-unit-cost/')">URLコピー</button></div>
       </article>
-
       <article class="card">
         <div class="inner"><div class="head"><div class="badge">⚙︎</div><div><h3>自動化効果試算ツール</h3><p>RPA/自動化の投資対効果を試算し、人件費削減や回収期間を確認できます。</p></div></div></div>
-        <div class="foot">
-          <a class="linkbtn primary" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener">開く</a>
-          <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/jidouka-kouka/')">URLコピー</button>
-        </div>
+        <div class="foot"><a class="linkbtn primary" href="https://takatrp.github.io/jidouka-kouka/" target="_blank" rel="noopener">開く</a><button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/jidouka-kouka/')">URLコピー</button></div>
       </article>
     </div>
   </section>
@@ -184,23 +186,17 @@
     <div class="grid">
       <article class="card">
         <div class="inner"><div class="head"><div class="badge">%</div><div><h3>受取利息・配当金 仕訳補助</h3><p>源泉徴収税額の見込みと仕訳補助に必要な数値を簡易計算します。</p></div></div></div>
-        <div class="foot">
-          <a class="linkbtn primary" href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">開く</a>
-          <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/withholding/')">URLコピー</button>
-        </div>
+        <div class="foot"><a class="linkbtn primary" href="https://takatrp.github.io/withholding/" target="_blank" rel="noopener">開く</a><button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/withholding/')">URLコピー</button></div>
       </article>
       <article class="card">
         <div class="inner"><div class="head"><div class="badge">Σ</div><div><h3>減価償却費計算ツール</h3><p>取得価額・耐用年数などから定額/定率の償却費を即時計算します。</p></div></div></div>
-        <div class="foot">
-          <a class="linkbtn primary" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">開く</a>
-          <button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/genkasyoukyaku/')">URLコピー</button>
-        </div>
+        <div class="foot"><a class="linkbtn primary" href="https://takatrp.github.io/genkasyoukyaku/" target="_blank" rel="noopener">開く</a><button class="linkbtn" onclick="copyUrl('https://takatrp.github.io/genkasyoukyaku/')">URLコピー</button></div>
       </article>
     </div>
   </section>
 
   <footer>
-    <div>Copyright (c) <span id="cpy-year">2025</span> 税理士法人松本会計事務所 All Rights Reserved. / <span id="build-rev">r25</span></div>
+    <div>Copyright (c) <span id="cpy-year">2025</span> 税理士法人松本会計事務所 All Rights Reserved. / <span id="build-rev">r26</span></div>
     <div id="last-updated" style="margin-top:6px; font-size:13px; color:var(--muted);"></div>
   </footer>
 
